--- a/Xperience/Xperience/Pages/_ViewImports.cshtml
+++ b/Xperience/Xperience/Pages/_ViewImports.cshtml
@@ -1,3 +1,7 @@
-@using Xperience
-@namespace Xperience.Pages
+﻿@using Microsoft.AspNetCore.Identity
+@using Xperience.Areas.Identity
+@using Xperience.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Xperience.Data.Entities.Users
+@using Xperience.Pages
+@using Xperience.Pages.Account
