--- a/Xperience/Xperience/Pages/Account/Register.cshtml
+++ b/Xperience/Xperience/Pages/Account/Register.cshtml
@@ -69,7 +69,7 @@
             </div>
             
 
-            <center><button type="submit" class="btn btn-primary btn-block mt-2" >Register</button></center>
+            <center><button type="submit" class="btn btn-primary btn-block mt-2" >Register!</button></center>
         </form>
     </div>
 
