--- a/Xperience/Xperience/Pages/Shared/_Layout.cshtml
+++ b/Xperience/Xperience/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@inject SignInManager<BaseUser> signinManager;
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -31,6 +32,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/SiteCategories/Index">Site Categories</a>
                         </li>
+                        @if (signinManager.IsSignedIn(User))
+                        {
+                            <li class="nav-item ml-auto">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Account/Logout">Logout</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
@@ -42,7 +49,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted" style="background-color : rgba(255, 255, 255, 0.6);">
         <div class="container">
             &copy; 2019 - Xperience - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
