--- a/Xperience/Xperience/wwwroot/css/style.css
+++ b/Xperience/Xperience/wwwroot/css/style.css
@@ -26,3 +26,8 @@
     width : 100%;
     background-color : rgba(255,255,255,0.5);
 }
+
+.EditUserInput {
+    border : none;
+    outline : none;
+}
