--- a/Xperience/Xperience/Pages/Account/EditUser.cshtml
+++ b/Xperience/Xperience/Pages/Account/EditUser.cshtml
@@ -19,29 +19,23 @@
     <table id="UserTable">
         <tr>
             <td>Username : </td>
-            <td><input readonly value="@user.UserName" id="element1" class="EditUserInput" /></td>
+            <td><input readonly value="@user.UserName"  class="EditUserInput inputElement" /></td>
         </tr>
         <tr>
             <td>Name : </td>
-            <td><input readonly value="@user.Name" id="element2" class="EditUserInput" asp-for="input.name" /></td>
+            <td><input readonly value="@user.Name" class="EditUserInput inputElement" asp-for="input.name" /></td>
         </tr>
         <tr>
             <td> D.O.B : </td>
-            <td><input type="date" value="@user.DateOfBirth.ToString("yyyy-MM-dd")" readonly id="element3" class="EditUserInput" asp-for="input.DOB" /></td>
+            <td><input type="date" value="@user.DateOfBirth.ToString("yyyy-MM-dd")" readonly class="EditUserInput inputElement" asp-for="input.DOB" /></td>
         </tr>
         <tr>
             <td>Gender : </td>
             <td>
-                <select disabled id="element4" class="EditUserInput" asp-for="input.gender">
+                <select disabled id="gender" class="EditUserInput selectInput inputElement" asp-for="input.gender">
                     <option value="Male">Male</option>
                     <option value="Female">Female</option>
                 </select>
-                <script type="text/javascript">
-                    document.getElementById("element4").selectedIndex = "0";
-                    @if (user.Gender == "Female") {
-                        @: document.getElementById("element4").selectedIndex = "1";
-                    }
-                </script>
             </td>
         </tr>
         <tr>
@@ -49,67 +43,60 @@
                 var Rel = context.Religions.FirstOrDefault(x => x.Id == user.ReligionId)?.Name;
             }
             <td>Religion : </td>
-            <td><input readonly value="@Rel" placeholder="Optional" id="element5" class="EditUserInput" asp-for="input.Religion" /></td>
+            <td><input readonly value="@Rel" class="EditUserInput inputElement" asp-for="input.Religion" /></td>
         </tr>
         <tr>
             @{
                 var Loc = context.Locations.FirstOrDefault(x => x.Id == user.LocationId)?.Name;
             }
             <td>Location : </td>
-            <td><input readonly value="@Loc" id="element6" class="EditUserInput" asp-for="input.Location" /></td>
+            <td><input readonly value="@Loc" class="EditUserInput inputElement" asp-for="input.Location" /></td>
+        </tr>
+        <tr>
+            <td>Languages : </td>
+            <td>
+                <select asp-for="input.languages" class="langs selectInput" multiple>
+                  @foreach (var item in context.Languages) { 
+                    <option id="lang-@item.Id" value="@item.Id">@item.Name</option>
+                  }
+                </select>
+            </td>
+        </tr>
+        <tr>
+            <td>Nationalities : </td>
+            <td>
+                <select asp-for="input.Nationalities" class="nations selectInput" multiple>
+                    @foreach (var item in context.Nationalities) { 
+                        <option id="nation-@item.Id" value="@item.Id">@item.Name</option>
+                    }
+                </select>
+            </td>
         </tr>
         <tr>
             <td>Biography : </td>
-            <td><textarea readonly id="element7" asp-for="input.Biography">@user.Biography</textarea></td>
+            <td><textarea readonly asp-for="input.Biography" class="inputElement">@user.Biography</textarea></td>
         </tr>
         <tr>
             <td>Conntector : </td>
             <td>
-                <input disabled type="checkbox" id="isConnector" onclick="showInfo()" asp-for="input.isConnector" />
+                <input disabled type="checkbox" id="isConnector" class="selectInput" asp-for="input.isConnector" />
             </td>
         </tr>
-        <tr id="info" style="visibility:hidden">
+        <tr id="info">
             <td>Info : </td>
             <td>
-                <textarea readonly asp-for='input.Info' id='element8'>@user.Info</textarea>
+                <textarea readonly asp-for='input.Info' class="inputElement">@user.Info</textarea>
             </td>
         </tr>
     </table>
-    <script type="text/javascript">
-        
-    </script>
-    <button type="submit" class="btn btn-danger" style="visibility:hidden" id="saveButton">Save</button>
+    <button type="submit" class="btn btn-danger" id="saveButton">Save</button>
 </form>
-<input type="button" onclick="makeEditable()" value="Edit" id="editButton" class="btn btn-primary" />
+<input type="button" value="Edit" class="btn btn-primary editButton" />
 
 <form action="/Account/ChangePassword">
     <button type="submit">Change Password</button>
 </form>
 
-<script type="text/javascript">
-    document.getElementById("isConnector").checked = false;
-         @if (user.ConnectorStatus) {
-             @: document.getElementById("isConnector").checked = true;
-          }
-    showInfo();
-    var NOfElements = 8;
-    function showInfo() {
-        if (document.getElementById("isConnector").checked) {
-            document.getElementById("info").style.visibility = "visible";
-        } else {
-            document.getElementById("info").style.visibility = "hidden";
-        }
-    }
+<script src="~/js/editUser.js"></script>
 
-    function makeEditable() {
-        for (i = 2; i <= NOfElements; i++) {
-            document.getElementById("element" + i).removeAttribute("readonly");
-            document.getElementById("element" + i).removeAttribute("disabled");
-            document.getElementById("element" + i).removeAttribute("class");
-        }
-        document.getElementById("isConnector").removeAttribute("disabled");
-        document.getElementById("editButton").style.visibility = "hidden";
-        document.getElementById("saveButton").style.visibility = "visible";
-    }
-</script>
 
