--- a/Xperience/Xperience/Pages/Account/Register.cshtml
+++ b/Xperience/Xperience/Pages/Account/Register.cshtml
@@ -63,8 +63,8 @@
                         <label asp-for="Input.Gender"></label>
                         <select class="form-control" asp-for="Input.Gender">
                             <option>--Select--</option>
-                            <option value="male">Male</option>
-                            <option value="female">Female</option>
+                            <option value="Male">Male</option>
+                            <option value="Female">Female</option>
                         </select>
                     </div>
                 </div>
