--- a/Xperience/Xperience/Pages/Account/feeds.cshtml
+++ b/Xperience/Xperience/Pages/Account/feeds.cshtml
@@ -20,7 +20,7 @@
         <div class="col-md-6">
             <div class="form-group">
                 <label>Post Details</label> <!--This should be a file-->
-                <input id="post_details" />
+                <input type="file" name="post_details" id="post_details" />
             </div>
             <div class="form-group">
                 <label>Caption</label> 
@@ -42,7 +42,7 @@
 
 
 <div class="posts">
-
+      
 </div>
 
 
